syntax = "proto3";

package blockchain;

message InputTransaction{
    bytes hash = 1;
    int32 previos_output_index = 2;
}

message Transaction{
    int32 version = 1;
    uint32 input_count = 2;
}



message Block{
    uint32 version = 1;
    bytes prev_block = 2;
    bytes merkle_root = 3;
    uint32 timestap = 4;
    uint32 bits = 5;
    uint32 nonce = 6;
    uint64 block_number = 7;
}